# my_ml_digest

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
digest/: bot.py  config.py  models.py  parser.py
digest/llm/: __init__.py  base.py  claude.py  gemini.py  openai.py  openrouter.py  prompt.py
